--- a/index.html
+++ b/index.html
@@ -54,13 +54,11 @@
         </section>
 
     </main>
+
     <footer>
-        <p> Juego programado por 👉🏾 <a href="">Lil Dree</a></p>
+        <p> Juego programado por <a href="https://instagram.com/thelildree?igshid=ZDdkNTZiNTM=">Lil Dree</a> sigueme </p>
     </footer>
 
-
-    
-    
     <script src="./js/juego.js"></script>
 </body>
 
